--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -24,6 +24,4 @@ ul li a li a:hover:not(.active) {
 
 .listContainer {
   display: flex;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
